--- a/SmartEcoA/ClientApp/src/assets/locale/en.json
+++ b/SmartEcoA/ClientApp/src/assets/locale/en.json
@@ -1,3 +1,6 @@
 {
+  "Paginator": {
+    "ItemsPerPage": "Items per page:"
+  },
   "AreYouSureDeleteThisRecord": "Are you sure to delete this record?"
 }
