--- a/SmartEcoA/ClientApp/src/assets/locale/kk.json
+++ b/SmartEcoA/ClientApp/src/assets/locale/kk.json
@@ -1,3 +1,6 @@
 {
+  "Paginator": {
+    "ItemsPerPage": "Бір беттегі элементтер:"
+  },
   "AreYouSureDeleteThisRecord": "Сіз бұл жазбаны өшіресіз бе??"
 }
