--- a/SmartEcoA/ClientApp/src/i18n/messages.ru.xlf
+++ b/SmartEcoA/ClientApp/src/i18n/messages.ru.xlf
@@ -1,18 +1,17 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file source-language="en" datatype="plaintext" original="ng2.template">
+  <file source-language="ru" datatype="plaintext" original="ng2.template" target-language="ru">
     <body>
-      <trans-unit id="Hello" datatype="html">
-        <source>Hello</source>
-        <target>Здравствуйте</target>
+      
+      <trans-unit id="Language" datatype="html">
+        <source>Language</source><target state="final">Язык</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/home/home.component.html</context>
-          <context context-type="linenumber">1</context>
+          <context context-type="sourcefile">app/locale/index.component.html</context>
+          <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
       <trans-unit id="PollutionEnvironments" datatype="html">
-        <source>Pollution Environments</source>
-        <target>Среды загязнения</target>
+        <source>Pollution Environments</source><target state="final">Среды загязнения</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/administration/administration.component.html</context>
           <context context-type="linenumber">7</context>
@@ -27,8 +26,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="Create" datatype="html">
-        <source>Create</source>
-        <target>Создать</target>
+        <source>Create</source><target state="final">Создать</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/list.component.html</context>
           <context context-type="linenumber">1</context>
@@ -39,56 +37,49 @@
         </context-group>
       </trans-unit>
       <trans-unit id="Filter" datatype="html">
-        <source>Filter</source>
-        <target>Фильтр</target>
+        <source>Filter</source><target state="final">Фильтр</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/list.component.html</context>
           <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
       <trans-unit id="Name" datatype="html">
-        <source>Name</source>
-        <target>Название</target>
+        <source>Name</source><target state="final">Название</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/list.component.html</context>
           <context context-type="linenumber">10</context>
         </context-group>
       </trans-unit>
       <trans-unit id="Details" datatype="html">
-        <source>Details</source>
-        <target>Детали</target>
+        <source>Details</source><target state="final">Детали</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/list.component.html</context>
           <context context-type="linenumber">17</context>
         </context-group>
       </trans-unit>
       <trans-unit id="Edit" datatype="html">
-        <source>Edit</source>
-        <target>Редактировать</target>
+        <source>Edit</source><target state="final">Редактировать</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/list.component.html</context>
           <context context-type="linenumber">18</context>
         </context-group>
       </trans-unit>
       <trans-unit id="Delete" datatype="html">
-        <source>Delete</source>
-        <target>Удалить</target>
+        <source>Delete</source><target state="final">Удалить</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/list.component.html</context>
           <context context-type="linenumber">19</context>
         </context-group>
       </trans-unit>
       <trans-unit id="CreateNewPollutionEnvironment" datatype="html">
-        <source>Create a new Pollution Environment</source>
-        <target>Создать среду загрязнения</target>
+        <source>Create a new Pollution Environment</source><target state="final">Создать среду загрязнения</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
           <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
       <trans-unit id="PollutionEnvironmentNameEnglish" datatype="html">
-        <source>Pollution Environment name (English)</source>
-        <target>Название среды загрязнения (английский)</target>
+        <source>Pollution Environment name (English)</source><target state="final">Название среды загрязнения (английский)</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
           <context context-type="linenumber">6</context>
@@ -99,8 +90,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="NotMore50Characters" datatype="html">
-        <source>Not more than 50 characters long.</source>
-        <target>Не более 50 символов.</target>
+        <source>Not more than 50 characters long.</source><target state="final">Не более 50 символов.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
           <context context-type="linenumber">7</context>
@@ -127,8 +117,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="NameEnglishRequired" datatype="html">
-        <source>Name (English) is required</source>
-        <target>Название (английский) обязательно</target>
+        <source>Name (English) is required</source><target state="final">Название (английский) обязательно</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
           <context context-type="linenumber">8</context>
@@ -139,8 +128,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="More50Characters" datatype="html">
-        <source>You have more than 50 characters</source>
-        <target>У Вас более 50 символов</target>
+        <source>You have more than 50 characters</source><target state="final">У Вас более 50 символов</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
           <context context-type="linenumber">9</context>
@@ -167,8 +155,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="PollutionEnvironmentNameRussian" datatype="html">
-        <source>Pollution Environment name (Russian)</source>
-        <target>Название среды загрязнения (русский)</target>
+        <source>Pollution Environment name (Russian)</source><target state="final">Название среды загрязнения (русский)</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
           <context context-type="linenumber">13</context>
@@ -179,8 +166,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="NameRussianRequired" datatype="html">
-        <source>Name (Russian) is required</source>
-        <target>Название (русский) обязательно</target>
+        <source>Name (Russian) is required</source><target state="final">Название (русский) обязательно</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
           <context context-type="linenumber">15</context>
@@ -191,8 +177,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="PollutionEnvironmentNameKazakh" datatype="html">
-        <source>Pollution Environment name (Kazakh)</source>
-        <target>Название среды загрязнения (казахский)</target>
+        <source>Pollution Environment name (Kazakh)</source><target state="final">Название среды загрязнения (казахский)</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
           <context context-type="linenumber">20</context>
@@ -203,8 +188,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="NameKazakhRequired" datatype="html">
-        <source>Name (Kazakh) is required</source>
-        <target>Название (казахский) обязательно</target>
+        <source>Name (Kazakh) is required</source><target state="final">Название (казахский) обязательно</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
           <context context-type="linenumber">22</context>
@@ -215,8 +199,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="Cancel" datatype="html">
-        <source>Cancel</source>
-        <target>Отмена</target>
+        <source>Cancel</source><target state="final">Отмена</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
           <context context-type="linenumber">29</context>
@@ -227,40 +210,35 @@
         </context-group>
       </trans-unit>
       <trans-unit id="EditPollutionEnvironment" datatype="html">
-        <source>Edit Pollution Environment</source>
-        <target>Редактировать среду загрязнения</target>
+        <source>Edit Pollution Environment</source><target state="final">Редактировать среду загрязнения</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/edit.component.html</context>
           <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
       <trans-unit id="Save" datatype="html">
-        <source>Save</source>
-        <target>Сохранить</target>
+        <source>Save</source><target state="final">Сохранить</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/edit.component.html</context>
           <context context-type="linenumber">28</context>
         </context-group>
       </trans-unit>
       <trans-unit id="PollutionEnvironmentDetails" datatype="html">
-        <source>Pollution Environment details</source>
-        <target>Детали среды загрязнения</target>
+        <source>Pollution Environment details</source><target state="final">Детали среды загрязнения</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/details.component.html</context>
           <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
       <trans-unit id="PollutionEnvironmentName" datatype="html">
-        <source>Pollution Environment name</source>
-        <target>Название среды загрязнения</target>
+        <source>Pollution Environment name</source><target state="final">Название среды загрязнения</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/details.component.html</context>
           <context context-type="linenumber">5</context>
         </context-group>
       </trans-unit>
       <trans-unit id="Back" datatype="html">
-        <source>Back</source>
-        <target>Обратно</target>
+        <source>Back</source><target state="final">Обратно</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/pollutionenvironments/details.component.html</context>
           <context context-type="linenumber">10</context>
