--- a/SmartEcoA/ClientApp/src/i18n/messages.ru.xlf
+++ b/SmartEcoA/ClientApp/src/i18n/messages.ru.xlf
@@ -3,11 +3,139 @@
   <file source-language="ru" datatype="plaintext" original="ng2.template" target-language="ru">
     <body>
       
-      <trans-unit id="Language" datatype="html">
+      <trans-unit id="Administration" datatype="html">
+        <source>Administration</source><target state="final">Администрирование</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/nav-menu/nav-menu.component.html</context>
+          <context context-type="linenumber">27</context>
+        </context-group>
+      </trans-unit><trans-unit id="Register" datatype="html">
+        <source>Register</source><target state="final">Регистрация</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/nav-menu/nav-menu.component.html</context>
+          <context context-type="linenumber">30</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">36</context>
+        </context-group>
+      </trans-unit><trans-unit id="LogIn" datatype="html">
+        <source>Log in</source><target state="final">Войти</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/nav-menu/nav-menu.component.html</context>
+          <context context-type="linenumber">33</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/login.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/login.component.html</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
+      </trans-unit><trans-unit id="LogOut" datatype="html">
+        <source>Log out</source><target state="final">Выйти</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/nav-menu/nav-menu.component.html</context>
+          <context context-type="linenumber">39</context>
+        </context-group>
+      </trans-unit><trans-unit id="Language" datatype="html">
         <source>Language</source><target state="final">Язык</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/locale/index.component.html</context>
           <context context-type="linenumber">2</context>
+        </context-group>
+      </trans-unit><trans-unit id="CreateANewAccount" datatype="html">
+        <source>Create a new account.</source><target state="final">Создать новый аккаунт.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+      </trans-unit><trans-unit id="Email" datatype="html">
+        <source>Email</source><target state="final">Эл. почта</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">8</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/login.component.html</context>
+          <context context-type="linenumber">8</context>
+        </context-group>
+      </trans-unit><trans-unit id="InvalidEmailAddress" datatype="html">
+        <source>
+          Invalid email address.
+        </source><target state="final">
+          Неверный адрес электронной почты.
+        </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+      </trans-unit><trans-unit id="Password" datatype="html">
+        <source>Password</source><target state="final">Пароль</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/login.component.html</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+      </trans-unit><trans-unit id="ThisFieldIsMandatory" datatype="html">
+        <source>
+            This field is mandatory.
+          </source><target state="final">
+            Это поле является обязательным.
+          </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">18</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">28</context>
+        </context-group>
+      </trans-unit><trans-unit id="Minimum6CharactersRequired" datatype="html">
+        <source>
+            Minimum 6 characters required.
+          </source><target state="final">
+            Требуется минимум 6 символов.
+          </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">21</context>
+        </context-group>
+      </trans-unit><trans-unit id="ConfirmPassword" datatype="html">
+        <source>Confirm password</source><target state="final">Подтвердите пароль</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">26</context>
+        </context-group>
+      </trans-unit><trans-unit id="ConfirmPasswordDoesNotMatch" datatype="html">
+        <source>
+            Confirm password does not match.
+          </source><target state="final">
+            Пароль и подтверждение пароля не совпадают.
+          </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/register.component.html</context>
+          <context context-type="linenumber">31</context>
+        </context-group>
+      </trans-unit><trans-unit id="UseYourEmailAndPasswordToLogIn" datatype="html">
+        <source>Use your email and password to log in.</source><target state="final">Используйте свой адрес электронной почты и пароль для входа.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/login.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+      </trans-unit><trans-unit id="RegisterAsANewUser" datatype="html">
+        <source>Register as a new user</source><target state="final">Зарегистрироваться как новый пользователь</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/login.component.html</context>
+          <context context-type="linenumber">20</context>
         </context-group>
       </trans-unit>
       <trans-unit id="PollutionEnvironments" datatype="html">
